# better-memory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ui-tests.yml
better_memory/: __init__.py  config.py
better_memory/db/: connection.py  schema.py
better_memory/embeddings/: __init__.py  ollama.py
better_memory/hooks/: observer.py  post_commit.py  session_close.py  session_start.py
better_memory/llm/: __init__.py  fake.py  ollama.py
better_memory/mcp/: __main__.py  server.py
better_memory/search/: __init__.py  hybrid.py  query.py
better_memory/services/: __init__.py  audit.py  consolidation.py  episode.py  insight.py  knowledge.py  observation.py  reflection.py  retention.py  spool.py  ui_launcher.py
better_memory/skills/: CLAUDE.snippet.md  memory-feedback.md  memory-retrieve.md  memory-write.md  session-close.md
better_memory/ui/: __init__.py  __main__.py  app.py  jobs.py  queries.py
docs/: hooks-setup.md
scripts/: setup.sh
tests/: conftest.py  test_config.py
tests/db/: test_connection.py  test_schema.py
tests/embeddings/: test_ollama_integration.py  test_ollama_unit.py
tests/hooks/: test_hooks_and_spool_integration.py  test_observer.py  test_post_commit.py  test_session_close.py  test_session_start.py
tests/llm/: test_ollama_chat.py
tests/mcp/: conftest.py  test_episode_tools.py  test_parse_window.py  test_retention_tool.py  test_server_integration.py  test_start_ui_tool.py
tests/search/: test_hybrid.py  test_query.py
tests/services/: test_audit.py  test_audit_trail.py  test_consolidation.py  test_episode.py  (+11 more)
(+80 files in other folders)
