[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-memory"
version = "0.1.0"
description = "Local-first AI memory system (MCP server + SQLite + sqlite-vec + Ollama embeddings)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "mcp",
    "sqlite-vec",
    "httpx",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["better_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
